# challenge_ROADEF_Google

./: .gitignore  README.md  benchmark.sh  model.lp  pyproject.toml  results.txt  resultsA.txt
data/: assignment_toy.txt  model_toy.txt
src/: Project.ipynb  benchmark.sh  checker.py  parser.py  problem.py  run.py  solver.py
