[tool.poetry]
name = "challenge_roadef_google"
version = "0.1.0"
description = ""
authors = ["mdeboute <martin.deboute@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mip = "^1.14.1"
ipykernel = "^6.15.2"
numpy = "^1.23.2"
nptyping = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
